# EduSync_CAT

./: .gitignore  .prettierrc  Edusync_DB.session.sql  LICENSE  README.md  compose.yml  context_menu.scss  jhuhkuk.session.sql  patch.rs  patch_bulk.ts  patch_create.ts  patch_replace.ts
backend/: .env.example  .gitignore  Cargo.toml  README.md  package-lock.json  package.json  run_migrations.rs  run_tmp.sh  tsconfig.json
backend-rs/: Cargo.toml  README.md
backend-rs/migrations/: 002_create_allowed_domains.sql  005_create_subjects.sql  006_create_buildings.sql  007_create_classrooms.sql  009_create_schedule_slots.sql
backend-rs/src/: main.rs
backend-rs/src/adapters/: mod.rs
backend-rs/src/adapters/auth/: jwt.rs  middleware.rs
backend-rs/src/adapters/graphql/: mod.rs  schema.rs
backend-rs/src/adapters/rest/: public_handler.rs  upload_handler.rs
backend-rs/src/domain/: errors.rs
backend-rs/src/domain/models/: allowed_domain.rs  mod.rs  subject.rs  user.rs
backend-rs/src/domain/ports/: group_repository.rs  schedule_slot_repository.rs  school_year_repository.rs  subject_repository.rs  user_repository.rs
backend-rs/src/domain/services/: auth_service.rs  building_service.rs  config_service.rs  mod.rs  schedule_service.rs  teacher_service.rs  user_service.rs
backend-rs/src/infrastructure/persistence/: mod.rs  pg_building_repo.rs  pg_schedule_slot_repo.rs  pg_school_year_repo.rs  pg_user_repo.rs
backend/migrations/: 001_create_users.sql  001_init.sql  002_fk_restrict.sql  002_user_backups.sql  003_create_school_years.sql  003_prevent_subgroup_delete_with_schedules.sql  003_token_invalidation.sql  004_create_teachers.sql  004_register_verify_email.sql  004_user_profile_fields.sql  005_create_subjects.sql  005_task_collaboration.sql  006_optional_full_name.sql  008_create_groups.sql  010_add_login_lockout.sql  011_allow_nullable_schedule_teacher.sql  012_add_subject_grade_and_division.sql  013_create_audit_logs.sql  014_catalog_constraints.sql  015_remove_default_subject_seed.sql  016_enable_group_subgroups.sql  017_add_grade_to_groups.sql
backend/scripts/: dev-stop.sh  dev-up.sh  show-genesis-credentials.sh
backend/src/: app.module.ts  config.rs  lib.rs  main.rs  main.ts  schema.gql
backend/src/adapters/auth/: jwt.rs  middleware.rs
backend/src/adapters/graphql/: audit.rs  mod.rs  realtime.rs  schema.rs
backend/src/adapters/rest/: mod.rs  public_handler.rs  upload_handler.rs
backend/src/domain/: mod.rs  validation.rs
backend/src/domain/models/: allowed_domain.rs  audit_log.rs  building.rs  classroom.rs  group.rs  mod.rs  password_reset.rs  pending_registration.rs  schedule_slot.rs  school_year.rs  shared_task.rs  subject.rs  teacher.rs  user.rs  user_backup.rs
backend/src/domain/ports/: allowed_domain_repository.rs  audit_log_repository.rs  building_repository.rs  classroom_repository.rs  collaboration_repository.rs  email_sender.rs  group_repository.rs  mod.rs  password_reset_repository.rs  pending_registration_repository.rs  schedule_slot_repository.rs  school_year_repository.rs  subject_repository.rs  teacher_repository.rs  user_backup_repository.rs  user_repository.rs
backend/src/domain/services/: auth_service.rs  excel_service.rs  (+10 more)
backend/src/infrastructure/: mod.rs
(+283 files in other folders)
