[package]
name = "backend-rs"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
anyhow = "1"
async-graphql = { version = "7", features = ["chrono", "uuid"] }
async-graphql-axum = "7"
async-trait = "0.1"
axum = { version = "0.8", features = ["multipart", "macros"] }
calamine = "0.34"
csv = "1"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
rand = "0.10"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["serde", "v4"] }
argon2 = "0.5"
futures-util = "0.3"
