[package]
name = "backend"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
default-run = "backend"

[dependencies]
anyhow = "1"
async-graphql = { version = "7", features = ["chrono", "uuid"] }
async-graphql-axum = "7"
async-trait = "0.1"
axum = { version = "0.8", features = ["multipart", "macros"] }
calamine = "0.34"
csv = "1"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
encoding_rs = "0.8"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
rand = "0.10"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json", "migrate"] }
thiserror = "2"
tokio = { version = "1.51.1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["serde", "v4"] }
argon2 = "0.5"
futures-util = "0.3"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }
rsa = { version = "0.9", features = ["sha2", "pem"] }
aes-gcm = "0.10"
sha2 = "0.10"
base64 = "0.22"
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]
tempfile = "3"

